--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,8 @@
 @import './base/settings';
 @import './base/base';
+
+@import './components/search';
+@import './components/breadcrumb';
+@import './components/itemProduct';
+@import './components/product';
+@import './components/ListProduct';
